--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       { id: 1, name: " pulmocodin 100ml. ", details: "    ", price: 2100, quantity: 0, image: "https://i.ibb.co/3VyZ8wK/photo.jpg" },
       { id: 2, name: " COLDIN 100ml  ", details: "    ", price: 1275, quantity: 0, image: "https://i.ibb.co/7xBrkTZZ/photo.jpg" },
       { id: 3, name: " Allermine100ml  ", details: "    ", price: 65000, quantity: 0, image: "https://i.ibb.co/hxz9MtBd/photo.jpg" },
-      { id:21 , name: " Isilin ", details: "    ", price: 2400, quantity: 0, image: "  " },
+      { id:21 , name: " Isilin ", details: "    ", price: 2400, quantity: 0, image: "https://i.ibb.co/3m3Ztd3w/Background-Eraser.jpg" },
      
 
       { id: 4, name: "  samadol ", details: "    ", price:865, quantity: 0, image: "https://i.ibb.co/CSyyk1v/photo.jpg" },
@@ -675,22 +675,22 @@
       { id: 20, name: "omnic Tocas", details: "    ", price: 19500, quantity: 0, image: "https://i.ibb.co/PsZJqNfr/photo.jpg" },
       { id: 20, name: "Aircom6", details: "    ", price: 9000, quantity: 0, image: "https://i.ibb.co/rhzwv0f/photo.jpg" },
       { id: 20, name: "tegretol CR", details: "    ", price: 20500, quantity: 0, image: "https://i.ibb.co/kVRgk7XH/photo.jpg" },
-      { id: 22 , name: " stugeron ", details: "    ", price: 3320, quantity: 0, image: "" },
-      { id: 23, name: " Bonviva 150ml ", details: "    ", price: 29000, quantity: 0, image: "" },
-      { id: 24, name: " sirdalud ", details: "    ", price: 5500, quantity: 0, image: "" },
-      { id: 25, name: "SEPO-MEDROL 40mg  ", details: "    ", price: 9500, quantity: 0, image: "  " },
-      { id: 26, name: " tobradex ", details: "    ", price: 8250, quantity: 0, image: "  " },
-      { id: 27, name: " carvedilol HEXA 6,25 ", details: "    ", price: 11750, quantity: 0, image: "  " },
-      { id: 28, name: " PERAMPANEL FILM coated tablets fycompa 4mg ", details: "    ", price: 44250, quantity: 0, image: "  " },
-      { id: 29, name: " yeniDOL   IV ", details: "    ", price: 1590, quantity: 0, image: "  " },
-      { id: 30, name: "Lopid 600  ", details: "    ", price: 26250, quantity: 0, image: "  " },
-      { id: 31, name: " daivobet ", details: "    ", price: 50000, quantity: 0, image: "  " },
-      { id: 32, name: " Ebetrex 2.5mg ", details: "    ", price: 10000, quantity: 0, image: "  " },
-      { id: 33, name: " provron ", details: "    ", price: 6500, quantity: 0, image: "  " },
-      { id: 34, name: " Dorofen ", details: "    ", price: 21900, quantity: 0, image: "  " },
-      { id: 35, name: " melio ", details: "    ", price: 9500, quantity: 0, image: "  " },
-      { id: 36, name: " ASPEGIC ", details: "    ", price: 9000, quantity: 0, image: "  " },
-      { id: 37, name: " GLYCERYL TRINITRATE ", details: "    ", price: 12000, quantity: 0, image: "  " },
+      { id: 22 , name: " stugeron ", details: "    ", price: 3320, quantity: 0, image: "https://i.ibb.co/0Rxbqhp6/Background-Eraser.jpg" },
+      { id: 23, name: " Bonviva 150ml ", details: "    ", price: 29000, quantity: 0, image: "https://i.ibb.co/qL2KTrfV/Background-Eraser.jpg" },
+      { id: 24, name: " sirdalud ", details: "    ", price: 5500, quantity: 0, image: "https://i.ibb.co/gb5xH7t8/Background-Eraser.jpg" },
+      { id: 25, name: "DEPO-MEDROL 40mg  ", details: "    ", price: 9500, quantity: 0, image: "https://i.ibb.co/B28Wvxh8/Background-Eraser.jpg" },
+      { id: 26, name: " tobradex ", details: "    ", price: 8250, quantity: 0, image: "https://i.ibb.co/27H9WJKp/Background-Eraser.jpg" },
+      { id: 27, name: " carvedilol HEXA 6,25 ", details: "    ", price: 11750, quantity: 0, image: "https://i.ibb.co/RkhG3gXg/Background-Eraser.jpg" },
+      { id: 28, name: " PERAMPANEL FILM coated tablets fycompa 4mg ", details: "    ", price: 44250, quantity: 0, image: "https://i.ibb.co/sLNvF7k/Background-Eraser.jpg" },
+      { id: 29, name: " yeniDOL   IV ", details: "    ", price: 1590, quantity: 0, image: "https://i.ibb.co/m5wwBkBZ/Background-Eraser.jpg" },
+      { id: 30, name: "Lopid 600  ", details: "    ", price: 26250, quantity: 0, image: "https://i.ibb.co/zhhPTqVP/Background-Eraser.jpg" },
+      { id: 31, name: " daivobet ", details: "    ", price: 50000, quantity: 0, image: "https://i.ibb.co/8Lv5f84b/Background-Eraser.jpg" },
+      { id: 32, name: " Ebetrex 2.5mg ", details: "    ", price: 10000, quantity: 0, image: "https://i.ibb.co/rRsv9L7M/Background-Eraser.jpg" },
+      { id: 33, name: " provron ", details: "    ", price: 6500, quantity: 0, image: "https://i.ibb.co/PvtbDZFJ/Background-Eraser.jpg" },
+      { id: 34, name: " Dorofen ", details: "    ", price: 21900, quantity: 0, image: "https://i.ibb.co/ynDXKS4k/Background-Eraser.jpg" },
+      { id: 35, name: " melio ", details: "    ", price: 9500, quantity: 0, image: "https://i.ibb.co/20zG3R60/Background-Eraser.jpg" },
+      { id: 36, name: " ASPEGIC ", details: "    ", price: 9000, quantity: 0, image: "https://i.ibb.co/ym1BCfBw/Background-Eraser.jpg" },
+      { id: 37, name: " GLYCERYL TRINITRATE ", details: "    ", price: 12000, quantity: 0, image: "https://i.ibb.co/My5ThPNP/Background-Eraser.jpg" },
 
 
       // يمكن إضافة المزيد من المنتجات الثابتة هنا
