--- a/index.html
+++ b/index.html
@@ -691,35 +691,35 @@
       { id: 35, name: " melio ", details: "    ", price: 9500, quantity: 0, image: "https://i.ibb.co/20zG3R60/Background-Eraser.jpg" },
       { id: 36, name: " ASPEGIC ", details: "    ", price: 9000, quantity: 0, image: "https://i.ibb.co/ym1BCfBw/Background-Eraser.jpg" },
       { id: 37, name: " GLYCERYL TRINITRATE ", details: "    ", price: 12000, quantity: 0, image: "https://i.ibb.co/My5ThPNP/Background-Eraser.jpg" },
-      { id: 38, name: "IBUROFEN", details: "", price: 1300, quantity: 0, image: "" },
-      { id: 39, name: "LOSART", details: "", price: 4100, quantity: 0, image: "" },
-      { id: 40, name: "PIOXIGA", details: "", price: 17800, quantity: 0, image: "" },
-      { id: 41, name: "COLDIN AL HAYAT", details: "", price: 1260, quantity: 0, image: "" },
-      { id: 42, name: "PIOSPAN", details: "", price: 2850, quantity: 0, image: "" },
-      { id: 43, name: "PREGAFIX", details: "", price: 15200, quantity: 0, image: "" },
-      { id: 44, name: "MONTIX", details: "", price: 8000, quantity: 0, image: "" },
-      { id: 45, name: "Laritia", details: "", price: 1350, quantity: 0, image: "" },
-      { id: 46, name: "Decopect", details: "", price: 1370, quantity: 0, image: "" },
-      { id: 47, name: "CYCLO-PROGYNOVA", details: "", price: 5800, quantity: 0, image: "" },
-      { id: 48, name: "LARIUS", details: "", price: 2300, quantity: 0, image: "" },
-      { id: 49, name: "NO-VOMIT", details: "", price: 3500, quantity: 0, image: "" },
-      { id: 50, name: "EXTRA", details: "", price: 1300, quantity: 0, image: "" },
-      { id: 51, name: "LIDOCAINE", details: "", price: 100, quantity: 0, image: "" },
-      { id: 52, name: "PIOTOPIN", details: "", price: 1900, quantity: 0, image: "" },
-      { id: 53, name: "PIOSTAN", details: "", price: 1600, quantity: 0, image: "" },
-      { id: 54, name: "EXIDIL", details: "", price: 850, quantity: 0, image: "" },
-      { id: 55, name: "ASPIN 100 ", details: "", price: 570, quantity: 0, image: "" },
-      { id: 56, name: "DERMOCAL", details: "", price: 795, quantity: 0, image: "" },
-      { id: 57, name: "SAMILIN", details: "", price: 770, quantity: 0, image: "" },
-      { id: 58, name: "مكلودين 10 mg", details: "", price: 630, quantity: 0, image: "" },
-      { id: 59, name: "DEXON", details: "", price: 13000, quantity: 0, image: "" },
-      { id: 60, name: "SEDLAR", details: "", price: 1000, quantity: 0, image: "" },
-      { id: 61, name: "DOMPERISAM 10 ", details: "", price: 11400, quantity: 0, image: "" },
-      { id: 62, name: "SAMAPATALIN", details: "", price: 1400, quantity: 0, image: "" },
-      { id: 63, name: "SAMALAFIL", details: "", price: 7130, quantity: 0, image: "" },
-      { id: 64, name: "AZITHROSAM", details: "", price: 1475, quantity: 0, image: "" },
-      { id: 65, name: "COLDIN", details: "", price: 19800, quantity: 0, image: "" },
-      { id: 66, name: "DAPAXOSIN", details: "", price: 17000, quantity: 0, image: "" },
+      { id: 38, name: "IBUROFEN", details: "", price: 1300, quantity: 0, image: "https://i.ibb.co/Hft5HnYy/Background-Eraser.jpg" },
+      { id: 39, name: "LOSART", details: "", price: 4100, quantity: 0, image: "https://i.ibb.co/Hfcc5qzV/Background-Eraser.jpg" },
+      { id: 40, name: "PIOXIGA", details: "", price: 17800, quantity: 0, image: "https://i.ibb.co/jvJHqc7r/Background-Eraser.jpg" },
+      { id: 41, name: "COLDIN AL HAYAT", details: "", price: 1260, quantity: 0, image: "https://i.ibb.co/35vxbgh0/Background-Eraser.jpg" },
+      { id: 42, name: "PIOSPAN", details: "", price: 2850, quantity: 0, image: "https://i.ibb.co/Ng90vT0D/Background-Eraser.jpg" },
+      { id: 43, name: "PREGAFIX", details: "", price: 15200, quantity: 0, image: "https://i.ibb.co/45tVN2c/Background-Eraser.jpg" },
+      { id: 44, name: "MONTIX", details: "", price: 8000, quantity: 0, image: "https://i.ibb.co/wV4sNtp/Background-Eraser.jpg" },
+      { id: 45, name: "Laritia", details: "", price: 1350, quantity: 0, image: "https://i.ibb.co/Qq7vTwc/Background-Eraser.jpg" },
+      { id: 46, name: "Decopect", details: "", price: 1370, quantity: 0, image: "https://i.ibb.co/sdLgY5xv/Background-Eraser.jpg" },
+      { id: 47, name: "CYCLO-PROGYNOVA", details: "", price: 5800, quantity: 0, image: "https://i.ibb.co/VYHdfSDH/Background-Eraser.jpg" },
+      { id: 48, name: "LARIUS", details: "", price: 2300, quantity: 0, image: "https://i.ibb.co/FkrKmS6w/Background-Eraser.jpg" },
+      { id: 49, name: "NO-VOMIT", details: "", price: 3500, quantity: 0, image: "https://i.ibb.co/Sw9rpKgp/Background-Eraser.jpg" },
+      { id: 50, name: "EXTRA", details: "", price: 1300, quantity: 0, image: "https://i.ibb.co/4wcP6L5H/Background-Eraser.jpg" },
+      { id: 51, name: "LIDOCAINE", details: "", price: 100, quantity: 0, image: "https://i.ibb.co/C5J9Fwfv/Background-Eraser.jpg" },
+      { id: 52, name: "PIOTOPIN", details: "", price: 1900, quantity: 0, image: "https://i.ibb.co/Y4Qcfv3k/Background-Eraser.jpg" },
+      { id: 53, name: "PIOSTAN", details: "", price: 1600, quantity: 0, image: "https://i.ibb.co/bj88wRJd/Background-Eraser.jpg" },
+      { id: 54, name: "EXIDIL", details: "", price: 850, quantity: 0, image: "https://i.ibb.co/My3wnfRF/Background-Eraser.jpg" },
+      { id: 55, name: "ASPIN 100 ", details: "", price: 570, quantity: 0, image: "https://i.ibb.co/27gQ1TgJ/Background-Eraser.jpg" },
+      { id: 56, name: "DERMOCAL", details: "", price: 795, quantity: 0, image: "https://i.ibb.co/hJfrvVMW/Background-Eraser.jpg" },
+      { id: 57, name: "SAMILIN", details: "", price: 770, quantity: 0, image: "https://i.ibb.co/8DxMmx6G/Background-Eraser.jpg" },
+      { id: 58, name: "مكلودين 10 mg", details: "", price: 630, quantity: 0, image: "https://i.ibb.co/TM4Wdm7s/Background-Eraser.jpg" },
+      { id: 59, name: "DEXON", details: "", price: 13000, quantity: 0, image: "https://i.ibb.co/Qjj2GDxY/Background-Eraser.jpg" },
+      { id: 60, name: "SEDLAR", details: "", price: 1000, quantity: 0, image: "https://i.ibb.co/WWjG3JW1/Background-Eraser.jpg" },
+      { id: 61, name: "DOMPERISAM 10 ", details: "", price: 11400, quantity: 0, image: "https://i.ibb.co/C3FwXrkF/Background-Eraser.jpg" },
+      { id: 62, name: "SAMAPATALIN", details: "", price: 1400, quantity: 0, image: "https://i.ibb.co/zhC0WTVf/Background-Eraser.jpg" },
+      { id: 63, name: "SAMALAFIL", details: "", price: 7130, quantity: 0, image: "https://i.ibb.co/Z6FnKYT4/Background-Eraser.jpg" },
+      { id: 64, name: "AZITHROSAM", details: "", price: 1475, quantity: 0, image: "https://i.ibb.co/qLRMXfbM/Background-Eraser.jpg" },
+      { id: 65, name: "COLDIN", details: "", price: 19800, quantity: 0, image: "https://i.ibb.co/5W05L1qW/Background-Eraser.jpg" },
+      { id: 66, name: "DAPAXOSIN", details: "", price: 17000, quantity: 0, image: "https://i.ibb.co/jkcvyS0W/Background-Eraser.jpg" },
       // يمكن إضافة المزيد من المنتجات الثابتة هنا
     ];
     
