--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <style>
-    /* تعريف ألوان متجر كوزمتك */
+    /* تعريف ألوان متجر  */
     :root {
       --primary-color: #220762;   /* وردي حيوي */
       --secondary-color: #02223d; /* بنفسجي */
