--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <style>
     /* تعريف ألوان متجر  */
     :root {
-      --primary-color: #220762;   /* وردي حيوي */
-      --secondary-color: #02223d; /* بنفسجي */
-      --accent-color: #3748b7;    /* وردي فاتح */
+      --primary-color: #0045e4;   /* وردي حيوي */
+      --secondary-color: #1a0090; /* بنفسجي */
+      --accent-color: #0c004d;    /* وردي فاتح */
       --background: #ffffff;      /* خلفية وردية فاتحة */
       --sidebar-bg: #ffffff;
       --modal-bg: rgba(0, 0, 0, 0.7);
