--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
     <header>
       <div>
         <h1><i><b>مذخر فيتامين</b></i></h1>
-        <p><i>اكتشف أفضل مستحضرات التجميل<br>07808560009</i></p>
+        <p><i>اكتشف أفضل المنتجات <br>07808560009</i></p>
       </div>
       <div>
         <div class="member-count d-inline-block me-3">
